--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
-.App {
+:root {
+  --primary: #E0E0E0;
+  --secondary: #9C9C9C;
+  --black: #181818;
+  --grey: #666;
+  --white: #FFF;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  background-color: var(--primary);
+  color: var(--black);
+  overflow: hidden;
+}
+
+.container {
+  display: flex;
+  padding: 3%;
+  padding-bottom: 0;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  flex-direction: row;
+}
+
+.data {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+}
+
+.logo {
+  font-size: 2.2em;
+  padding: 2% 0;
+  font-weight: 700;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h5 {
+  font-size: 1.2em;
+  font-weight: 400;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media only screen and (max-width: 992px) {
+  body {
+    font-size: 15px;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (max-width: 600px) {
+  body {
+    overflow: auto;
+    font-size: 14px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .container{
+    height: auto;
   }
 }
